--- a/web/angular-wallet/src/app/main/tokens/tokens.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens.component.html
@@ -1,3 +1,3 @@
-<app-page [wide]="true" title="{{ 'assets' | i18n }}">
+<app-page [full]="true" title="{{ 'assets' | i18n }}">
   <app-tokens-table [tokens]="tokens"></app-tokens-table>
 </app-page>
