--- a/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/right/options/options.component.html
@@ -22,10 +22,7 @@
   </div>
 
   <div class="mat-form-field">
-    <burst-fee-selector
-      [fees]="fees"
-      [(fee)]="feeBurst"
-    ></burst-fee-selector>
+    <app-fee-selector [fees]="fees" [(fee)]="feeBurst"></app-fee-selector>
   </div>
 
   <div class="mat-form-field mt-16">
