--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -29,7 +29,7 @@
 
       <ng-container *ngIf="!immutable">
 
-        <burst-fee-selector [fees]="fees" [(fee)]="fee"></burst-fee-selector>
+        <app-fee-selector [fees]="fees" [(fee)]="fee"></app-fee-selector>
 
         <div *ngIf="advanced">
           <mat-form-field>
