--- a/web/angular-wallet/src/app/components/fee-selector/fee-selector.component.html
+++ b/web/angular-wallet/src/app/components/fee-selector/fee-selector.component.html
@@ -2,7 +2,7 @@
   <div class="__info">
     <label class="pill">{{'suggested_fee' | i18n}}</label>
     <a class="--help"
-       href="https://www.burstcoin.community/burstcoin-transaction-types-and-fees/"
+       href="https://signum.community/signum-transaction-types-fees/"
        target="_blank"
        matTooltip="{{'click_here_for_help' | i18n}}"
     >
