--- a/web/angular-wallet/src/styles.scss
+++ b/web/angular-wallet/src/styles.scss
@@ -41,3 +41,37 @@ app-market-overview {
     padding:0 !important;
   }
 }
+
+.error-text {
+  color: red;
+  font-weight: bold;
+  animation: grow-pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes grow-pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0.4;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
