--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit();" #transferForm="ngForm">
+<form (ngSubmit)="onSubmit($event);" #transferForm="ngForm">
   <recipient-input [recipientValue]="recipient.addressRaw"
                    (recipientChange)="onRecipientChange($event)"
                    (qrCodeUpload)="onQRUpload($event)"
@@ -7,14 +7,48 @@
   <app-amount-input #amountValue [maxAmount]="token.balance" [symbol]="token.name" [(amount)]="quantity"
                     [disabled]="immutable"></app-amount-input>
   <app-fee-selector #feeValue [fees]="fees" [(fee)]="fee"></app-fee-selector>
-  <app-submit-transaction [disabled]="!(hasSufficientBalance() && hasSufficientQuantity())"
+
+
+  <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage"
+                name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
+
+  <div *ngIf="showMessage">
+    <div class="inlined mt-4">
+      <mat-checkbox
+        class="font-size-12"
+        labelPosition="before"
+        [disabled]="immutable"
+        [(ngModel)]="encrypt"
+        name="encrypt">{{ "encrypt_message" | i18n }}?
+      </mat-checkbox>
+      <mat-checkbox
+        class="font-size-12"
+        labelPosition="before" [disabled]="immutable" [(ngModel)]="messageIsText"
+        name="messageIsText">{{ "message_is_text" | i18n }}</mat-checkbox>
+    </div>
+    <mat-form-field>
+      <textarea #messageValue
+                name="message"
+                matInput [disabled]="immutable" [(ngModel)]="message"
+                placeholder="{{ 'message' | i18n }}"
+                cdkTextareaAutosize
+      ></textarea>
+    </mat-form-field>
+  </div>
+
+  <app-submit-transaction [disabled]="!canSubmit()"
                           [isSubmitting]="isSubmitting"
                           (pinChange)="setPin($event)"
   >
   </app-submit-transaction>
-  <div class="total">
-    <strong>{{'total' | i18n}}:&nbsp;</strong>
-    <span [class.error-text]="!hasSufficientQuantity()">{{this.token.name}} {{ this.quantity || '0'}} </span>
-    <small [class.error-text]="!hasSufficientBalance()">{{ this.fee | amount:'signa'}}</small>
+  <div class="inlined">
+    <div class="total">
+      <strong>{{'total' | i18n}}:&nbsp;</strong>
+      <span [class.error-text]="!hasSufficientQuantity()">{{this.token.name}} {{ this.getQuantity() }} </span>
+      <small [class.error-text]="!hasSufficientBalance()">{{ this.fee | amount:'signa'}}</small>
+    </div>
+    <div>
+      <span class="error-text">{{getErrorHint()}}</span>
+    </div>
   </div>
 </form>
