--- a/web/angular-wallet/src/styles.scss
+++ b/web/angular-wallet/src/styles.scss
@@ -45,7 +45,7 @@ app-market-overview {
 .error-text {
   color: red;
   font-weight: bold;
-  animation: grow-pulse 2s infinite;
+  animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
@@ -56,21 +56,6 @@ app-market-overview {
     opacity: 0.6;
   }
   100% {
-    opacity: 1;
-  }
-}
-
-@keyframes grow-pulse {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1.5);
-    opacity: 0.4;
-  }
-  100% {
-    transform: scale(1);
     opacity: 1;
   }
 }
