feat: not showing actions for offline accounts only

--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -15,7 +15,7 @@
     <mat-header-cell *matHeaderCellDef>{{ 'balance' | i18n }}</mat-header-cell>
     <mat-cell *matCellDef="let token">
       <div class="stacked">
-        <div>{{ token.balance | number }}</div>
+        <div>{{ token.balance | number:'1.0-6': locale }}</div>
         <div class="smaller">{{ token.total | amount : 'signa' : true}}</div>
       </div>
     </mat-cell>
