--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -42,11 +42,7 @@
       </mat-tab>
       <mat-tab label="{{ 'assets' | i18n }}">
 
-        <app-tokens-table
-          [tokens]="tokens"
-          >
-
-        </app-tokens-table>
+        <app-tokens-table [tokens]="tokens" [showActions]="false"></app-tokens-table>
       </mat-tab>
     </mat-tab-group>
   </div>
