--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer.component.html
@@ -25,8 +25,8 @@
       <p class="pb-8">{{token.priceInfo.amount | amount}}</p>
     </div>
   </div>
-  <hr/>
-  <div class="transfer-form">
+  <hr class="pl-20 pr-20"/>
+  <div class="transfer-form pl-20 pr-20">
     <app-token-transfer-form
       [fees]="fees"
       [account]="account"
