--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer-form/token-transfer-form.component.html
@@ -51,7 +51,7 @@
 
   <app-submit-transaction [disabled]="!canSubmit()"
                           [isSubmitting]="isSubmitting"
-                          (pinChange)="setPin($event)"
+                          [(pin)] = "pin"
   >
   </app-submit-transaction>
   <div class="inlined">
