feat: btdex hint

--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
@@ -61,4 +61,9 @@
   .mat-column-actions {
     flex: 0 1 32px;
   }
+  .btdex-hint {
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
+  }
 }
