--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -1,4 +1,10 @@
-<mat-table [dataSource]="dataSource" matSort>
+<small class="btdex-hint">
+  {{'trade_tokens_with'| i18n}}&nbsp;
+  <a href="https://btdex.trade" target="_blank" rel="noopener noreferrer">
+    <img src="assets/images/logos/btdex-logo.png" [width]="16" alt="BTDEX Logo">BTDEX
+  </a>
+</small>
+<mat-table *ngIf="dataSource.data.length > 0" [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="token">
     <mat-header-cell *matHeaderCellDef>{{ 'asset' | i18n }}</mat-header-cell>
@@ -55,3 +61,8 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+
+
+<div *ngIf="dataSource.data.length === 0" class="text-center">
+  <h2>{{'no_tokens_available'|i18n}}</h2>
+</div>
