fix: token table in account details

--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
@@ -61,9 +61,16 @@
   .mat-column-actions {
     flex: 0 1 32px;
   }
+
+  .wrapper {
+    background-color: white;
+    padding: 0.5rem;
+  }
+
   .btdex-hint {
     display: flex;
     justify-content:flex-end;
     align-items: center;
+    margin-bottom: 0.25rem;
   }
 }
