--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -41,8 +41,7 @@
         </app-transaction-table>
       </mat-tab>
       <mat-tab label="{{ 'assets' | i18n }}">
-
-        <app-tokens-table [tokens]="tokens" [showActions]="false"></app-tokens-table>
+        <app-tokens-table [tokens]="tokens" [showActions]="account.type === 'active'"></app-tokens-table>
       </mat-tab>
     </mat-tab-group>
   </div>
