--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -1,68 +1,70 @@
-<small class="btdex-hint">
-  {{'trade_tokens_with'| i18n}}&nbsp;
-  <a href="https://btdex.trade" target="_blank" rel="noopener noreferrer">
-    <img src="assets/images/logos/btdex-logo.png" [width]="16" alt="BTDEX Logo">BTDEX
-  </a>
-</small>
-<mat-table *ngIf="dataSource.data.length > 0" [dataSource]="dataSource" matSort>
+<div class="wrapper">
+  <small class="btdex-hint">
+    {{'trade_tokens_with'| i18n}}&nbsp;
+    <a href="https://btdex.trade" target="_blank" rel="noopener noreferrer">
+      <img src="assets/images/logos/btdex-logo.png" [width]="16" alt="BTDEX Logo">BTDEX
+    </a>
+  </small>
+  <mat-table *ngIf="dataSource.data.length > 0" [dataSource]="dataSource" matSort>
 
-  <ng-container matColumnDef="token">
-    <mat-header-cell *matHeaderCellDef>{{ 'asset' | i18n }}</mat-header-cell>
-    <mat-cell *matCellDef="let token">
-      <mat-icon class="icon" matTooltip="{{ token.description }}">info</mat-icon>
-      <div class="stacked ml-8">
-        <div>{{ token.name }}</div>
-        <div class="smaller">{{ token.id }}</div>
-      </div>
-    </mat-cell>
-  </ng-container>
-
-  <ng-container matColumnDef="balance">
-    <mat-header-cell *matHeaderCellDef>{{ 'balance' | i18n }}</mat-header-cell>
-    <mat-cell *matCellDef="let token">
-      <div class="stacked">
-        <div>{{ token.balance | number:'1.0-6': locale }}</div>
-        <div class="smaller">{{ token.total | amount : 'signa' : true}}</div>
-      </div>
-    </mat-cell>
-  </ng-container>
-
-  <ng-container matColumnDef="lastPrice">
-    <mat-header-cell *matHeaderCellDef>{{ 'last_price' | i18n }}</mat-header-cell>
-    <mat-cell *matCellDef="let token">
-      <div class="stacked">
-        <div>{{ token.priceInfo.amount | amount : 'signa' : true}}</div>
-        <div class="smaller price-change {{getTrend(token.priceInfo.change)}}">
-          {{token.priceInfo.change | percent : '1.2-4': locale}}
+    <ng-container matColumnDef="token">
+      <mat-header-cell *matHeaderCellDef>{{ 'asset' | i18n }}</mat-header-cell>
+      <mat-cell *matCellDef="let token">
+        <mat-icon class="icon" matTooltip="{{ token.description }}">info</mat-icon>
+        <div class="stacked ml-8">
+          <div>{{ token.name }}</div>
+          <div class="smaller">{{ token.id }}</div>
         </div>
-      </div>
-    </mat-cell>
-  </ng-container>
+      </mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="supply">
-    <mat-header-cell *matHeaderCellDef>{{ 'supply' | i18n }}</mat-header-cell>
-    <mat-cell *matCellDef="let token">
-      <div class="stacked">
-        <div>{{ token.supply | number : '': locale }}</div>
-        <div class="smaller">{{ getShare(token) | percent : '1.2-4': locale }}</div>
-      </div>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="balance">
+      <mat-header-cell *matHeaderCellDef>{{ 'balance' | i18n }}</mat-header-cell>
+      <mat-cell *matCellDef="let token">
+        <div class="stacked">
+          <div>{{ token.balance | number:'1.0-6': locale }}</div>
+          <div class="smaller">{{ token.total | amount : 'signa' : true}}</div>
+        </div>
+      </mat-cell>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-    <mat-cell *matCellDef="let token">
-      <a [routerLink]="['/tokens/transfer', token.id]">
-        <mat-icon class="actions-icon" matTooltip="{{'asset_transfer' | i18n}}">vertical_align_top</mat-icon>
-      </a>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="lastPrice">
+      <mat-header-cell *matHeaderCellDef>{{ 'last_price' | i18n }}</mat-header-cell>
+      <mat-cell *matCellDef="let token">
+        <div class="stacked">
+          <div>{{ token.priceInfo.amount | amount : 'signa' : true}}</div>
+          <div class="smaller price-change {{getTrend(token.priceInfo.change)}}">
+            {{token.priceInfo.change | percent : '1.2-4': locale}}
+          </div>
+        </div>
+      </mat-cell>
+    </ng-container>
 
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+    <ng-container matColumnDef="supply">
+      <mat-header-cell *matHeaderCellDef>{{ 'supply' | i18n }}</mat-header-cell>
+      <mat-cell *matCellDef="let token">
+        <div class="stacked">
+          <div>{{ token.supply | number : '': locale }}</div>
+          <div class="smaller">{{ getShare(token) | percent : '1.2-4': locale }}</div>
+        </div>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let token">
+        <a [routerLink]="['/tokens/transfer', token.id]">
+          <mat-icon class="actions-icon" matTooltip="{{'asset_transfer' | i18n}}">vertical_align_top</mat-icon>
+        </a>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
 
-<div *ngIf="dataSource.data.length === 0" class="text-center">
-  <h2>{{'no_tokens_available'|i18n}}</h2>
+  <div *ngIf="dataSource.data.length === 0" class="text-center">
+    <h2>{{'no_tokens_available'|i18n}}</h2>
+  </div>
 </div>
