--- a/web/angular-wallet/src/app/main/tokens/tokens.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens.component.html
@@ -1,6 +1,7 @@
 <app-page [full]="true" title="{{ 'assets' | i18n }}">
   <app-tokens-table
     [tokens]="tokens"
+    [isLoading]="isLoading"
     [showActions]="selectedAccount.type !== 'offline'">
   </app-tokens-table>
 </app-page>
