--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.scss
@@ -13,22 +13,6 @@
     max-height: 600px;
   }
 
-  .element-row {
-    position: relative;
-  }
-
-  .element-row:not(.expanded) {
-    cursor: pointer;
-  }
-
-  .element-row:not(.expanded):hover {
-    background: #f5f5f5;
-  }
-
-  .element-row.expanded {
-    border-bottom-color: transparent;
-  }
-
   .price-change {
     padding: 0.25rem 1rem;
     border-radius: 8px;
@@ -64,7 +48,11 @@
 
   .wrapper {
     background-color: white;
-    padding: 0.5rem;
+  }
+
+  .skeleton {
+    width: 80%;
+    padding-top: 0.5rem;
   }
 
   .btdex-hint {
@@ -72,5 +60,6 @@
     justify-content:flex-end;
     align-items: center;
     margin-bottom: 0.25rem;
+    padding: 0.5rem;
   }
 }
