--- a/web/angular-wallet/src/app/main/main.component.html
+++ b/web/angular-wallet/src/app/main/main.component.html
@@ -5,15 +5,15 @@
     [selectedAccount]="selectedAccount"
     [accounts]="accounts"></vertical-layout-1>
 </ng-container>
-<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-2'">
-  <vertical-layout-2></vertical-layout-2>
-</ng-container>
-<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-3'">
-  <vertical-layout-3></vertical-layout-3>
-</ng-container>
-<ng-container *ngIf="fuseConfig.layout.style === 'horizontal-layout-1'">
-  <horizontal-layout-1></horizontal-layout-1>
-</ng-container>
+<!--<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-2'">-->
+<!--  <vertical-layout-2></vertical-layout-2>-->
+<!--</ng-container>-->
+<!--<ng-container *ngIf="fuseConfig.layout.style === 'vertical-layout-3'">-->
+<!--  <vertical-layout-3></vertical-layout-3>-->
+<!--</ng-container>-->
+<!--<ng-container *ngIf="fuseConfig.layout.style === 'horizontal-layout-1'">-->
+<!--  <horizontal-layout-1></horizontal-layout-1>-->
+<!--</ng-container>-->
 
 
 <!-- THEME OPTIONS PANEL -->
