--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.scss
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.scss
@@ -45,10 +45,8 @@ toolbar {
 }
 
 fuse-search-bar,
-.user-button,
-.language-button,
-.chat-panel-toggle-button,
-.quick-panel-toggle-button {
+.action-button,
+{
   min-width: 64px;
   height: 64px;
 
