wip: added dashboard  layout service

--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -24,7 +24,7 @@
       </div>
 
       <button mat-button [matMenuTriggerFor]="profileMenu" class="action-button">
-        <span fxLayout="row" fxLayoutAlign="center center"  matTooltip="{{selectedProfile.description | i18n}}">
+        <span fxLayout="row" fxLayoutAlign="center center"  matTooltip="{{'select_profile' | i18n}}">
           <mat-icon class="secondary-text">{{selectedProfile.icon}}</mat-icon>
           <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
         </span>
